[gd_scene load_steps=6 format=3 uid="uid://c3ktq1b5b5p3s"]

[ext_resource type="Script" path="res://statControl.gd" id="1_dam0w"]

[sub_resource type="Theme" id="Theme_jjva6"]
resource_local_to_scene = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uv7hq"]
bg_color = Color(0.164706, 0.615686, 1, 0.94902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rbw4g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wkyl"]
bg_color = Color(1.22733e-06, 0.423637, 0.2862, 1)

[node name="StatControl" type="PanelContainer"]
custom_minimum_size = Vector2(200, 75)
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -376.0
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = SubResource("Theme_jjva6")
theme_override_styles/panel = SubResource("StyleBoxFlat_uv7hq")
script = ExtResource("1_dam0w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="statLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "STAT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatControlPanelRead" type="HBoxContainer" parent="HBoxContainer"]
material = SubResource("CanvasItemMaterial_rbw4g")
custom_minimum_size = Vector2(150, 50)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 5
alignment = 1

[node name="statCurrentValue" type="Label" parent="HBoxContainer/StatControlPanelRead"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="statMaxValue" type="Label" parent="HBoxContainer/StatControlPanelRead"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatControlPanelEdit" type="HBoxContainer" parent="HBoxContainer"]
visible = false
material = SubResource("CanvasItemMaterial_rbw4g")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="statCurrentValue" type="LineEdit" parent="HBoxContainer/StatControlPanelEdit"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../Button")
focus_neighbor_right = NodePath("../statMaxValue")
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true

[node name="statMaxValue" type="LineEdit" parent="HBoxContainer/StatControlPanelEdit"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_left = NodePath("../statCurrentValue")
focus_neighbor_top = NodePath("../../../Button")
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_neighbor_bottom = NodePath("../HBoxContainer/StatControlPanelEdit/statCurrentValue")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3wkyl")
icon_alignment = 1
